--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@mondaydotcomorg/api": "^7.0.1",
     "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
-    "monstaa": "^1.1.2"
+    "fastify": "^5.0.0"
   }
 }
