--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ INFRA_BOARD=4246232837
 INFRA_CAMPAIGN_BOARD_ID_CID=text
 INFRA_THEME_BOARD_ID_CID=text98
 INFRA_OFFER_BOARD_ID_CID=text8
-INFRA_CONFIG_COLUMN_GROUP_CID = color8
-INFRA_CONFIG_PARAMETER_LEVEL_CID = color7
 INFRA_CONFIG_BOARD_ID_CID=communications
-INFRA_CONFIG_FFN_CID=text5__1
-INFRA_CONFIG_COLUMN_ID_CID=text
+INFRA_COLUMN_GROUP_CID = color8
+INFRA_PARAMETER_LEVEL_CID = color7
+INFRA_FFN_CID=text5__1
+INFRA_COLUMN_ID_CID=text
 
 NODE_ENV=dev
