--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "monday-sdk-js": "^0.5.6",
-    "monstaa": "^1.2.15"
+    "monstaa": "^1.2.17",
+    "redis": "^4.7.0"
   }
 }
